Fixed apache conf

--- a/etc/httpd/v.hosts/transport.conf
+++ b/etc/httpd/v.hosts/transport.conf
@@ -1,10 +1,40 @@
 #WSGIPythonPath /var/www/transport
 
-NameVirtualHost *:8081
 WSGISocketPrefix /var/run/wsgi
 
-<VirtualHost *:8081>
-  ServerName admins.yourseller.net
+<VirtualHost *:80>
+    ServerName essaycoffee.com
+    Redirect permanent / http://www.essaycoffee.com/
+</VirtualHost>
+
+<VirtualHost *:80>
+  ServerName www.essaycoffee.com
+  DocumentRoot /var/www/transport_cust
+  Alias /static /var/www/transport_cust/static
+  Alias /media /var/www/transport_cust/media
+  ErrorLog logs/transport_cust-error_log
+  CustomLog logs/transport_cust-access_log common
+  WSGIProcessGroup customers 
+  WSGIDaemonProcess customers user=apache display-name=customers
+  WSGIScriptAlias / /var/www/transport_cust/customer_wsgi.py
+  <Directory /var/www/transport_cust/static>
+      Order allow,deny
+      Allow from all
+  </Directory>
+  <Directory /var/www/transport_cust/media>
+      Order allow,deny
+      Allow from all
+  </Directory>
+  <Directory /var/www/transport_cust>
+    <Files customer_wsgi.py>
+      Order deny,allow
+      Allow from all
+    </Files>
+  </Directory>
+</VirtualHost>
+
+<VirtualHost *:80>
+  ServerName admins.essaycoffee.com
   DocumentRoot /var/www/transport
   Alias /static /var/www/transport/static
   Alias /media /var/www/transport/media
@@ -29,8 +59,8 @@ WSGISocketPrefix /var/run/wsgi
   </Directory>
 </VirtualHost>
 
-<VirtualHost *:8081>
-  ServerName editors.yourseller.net
+<VirtualHost *:80>
+  ServerName editors.essaycoffee.com
   DocumentRoot /var/www/transport
   Alias /static /var/www/transport/static
   Alias /media /var/www/transport/media
@@ -55,8 +85,8 @@ WSGISocketPrefix /var/run/wsgi
   </Directory>
 </VirtualHost>
 
-<VirtualHost *:8081>
-  ServerName writers.yourseller.net
+<VirtualHost *:80>
+  ServerName writers.essaycoffee.com
   DocumentRoot /var/www/transport
   Alias /static /var/www/transport/static
   Alias /media /var/www/transport/media
@@ -81,28 +111,23 @@ WSGISocketPrefix /var/run/wsgi
   </Directory>
 </VirtualHost>
 
-<VirtualHost *:8081>
-  ServerName customers.yourseller.net
-  DocumentRoot /var/www/transport
-  Alias /static /var/www/transport/static
-  Alias /media /var/www/transport/media
-  ErrorLog logs/transport-error_log
-  CustomLog logs/transport-access_log common
-  WSGIProcessGroup customers 
-  WSGIDaemonProcess customers user=apache display-name=customers
-  WSGIScriptAlias / /var/www/transport/customer_wsgi.py
-  <Directory /var/www/transport/static>
-      Order allow,deny
-      Allow from all
+<VirtualHost *:80>
+  ServerName mail.essaycoffee.com
+  DocumentRoot /var/www/squirrelmail
+  Alias /squirrelmail /usr/share/squirrelmail
+  ErrorLog logs/squirrel-error_log
+  CustomLog logs/squirrel-access_log common
+  #WSGIProcessGroup writers 
+  #WSGIDaemonProcess writers user=apache display-name=writers 
+  #WSGIScriptAlias / /var/www/transport/writer_wsgi.py
+  <Directory /usr/share/squirrelmail>
+     Require all granted
   </Directory>
-  <Directory /var/www/transport/media>
-      Order allow,deny
-      Allow from all
-  </Directory>
-  <Directory /var/www/transport>
-    <Files customer_wsgi.py>
-      Order deny,allow
-      Allow from all
-    </Files>
-  </Directory>
+  #<Directory /usr/share/squirrelmail>
+  #  Options Indexes FollowSymLinks
+  #  AllowOverride All
+  #  DirectoryIndex index.php
+  #  Order allow,deny
+  #  Allow from all
+  #</Directory>
 </VirtualHost>
