--- a/etc/ftp/proftpd.conf
+++ b/etc/ftp/proftpd.conf
@@ -15,7 +15,7 @@ DeferWelcome			off
 
 # Use this to excude users from the chroot
 DefaultRoot			~ !adm
-
+AllowForeignAddress             on
 # Use pam to authenticate (default) and be authoritative
 AuthPAMConfig			proftpd
 AuthOrder			mod_auth_pam.c* mod_auth_unix.c
@@ -23,6 +23,7 @@ AuthOrder			mod_auth_pam.c* mod_auth_unix.c
 # Do not perform ident nor DNS lookups (hangs when the port is filtered)
 IdentLookups			off
 UseReverseDNS			off
+UseIPv6                         off
 
 # Port 21 is the standard FTP port.
 Port				  2121
@@ -56,8 +57,8 @@ AllowStoreRestart		on
 MaxInstances			20
 
 # Set the user and group that the server normally runs at.
-User			        ftp	
-Group				ftp
+User			        root	
+Group				root
 
 # Disable sendfile by default since it breaks displaying the download speeds in
 # ftptop and ftpwho
