Fixed bug with uplods

--- a/etc/ftp/proftpd.conf
+++ b/etc/ftp/proftpd.conf
@@ -57,8 +57,8 @@ AllowStoreRestart		on
 MaxInstances			20
 
 # Set the user and group that the server normally runs at.
-User			        root	
-Group				root
+User			        ftp	
+Group				ftp
 
 # Disable sendfile by default since it breaks displaying the download speeds in
 # ftptop and ftpwho
